# Azure-Kinect-Samples

./: CMakeLists.txt
body-tracking-samples/: CMakeLists.txt
body-tracking-samples/csharp_3d_viewer/: PointCloud.cs
body-tracking-samples/offline_processor/: CMakeLists.txt
body-tracking-samples/sample_helper_includes/: PointCloudRenderer.h
body-tracking-samples/simple_3d_viewer/: CMakeLists.txt
